exercise/greeting/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: exercises
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greet-route
  namespace: exercises
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: greet-svc
    port: 3000
  rules:
  - backendRefs:
    - name: greet-svc-v1
      port: 3000
      weight: 75
    - name: greet-svc-v2
      port: 3000
      weight: 25

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: exercises
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /greet
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: greet-svc-v1
      port: 3000
      weight: 75
    - name: greet-svc-v2
      port: 3000
      weight: 25
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: ping-pong-svc
      port: 3567
  - matches:
    - path:
        type: PathPrefix
        value: /log
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: log-output-svc
      port: 1234
